Smaller logo on front page

--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@
 
 layout: home
 ---
-<div style="margin:0 auto"><img src="images/logo_large.png"/></div>
+<div style="margin:0 auto"><img src="images/logo_large.png" width="50%"/></div>
