--- a/index.html
+++ b/index.html
@@ -4,4 +4,18 @@
 
 layout: home
 ---
-<div style="margin:0 auto"><img src="images/logo_large.png" width="50%"/></div>
+<table><tr><td style="border: none;" align="center"><img src="images/logo_large.png" width="50%"/></td></tr></table>
+
+<p>Hi, I'm Bas Dijkstra, and I help companies improve their software testing efforts through the smart application of tools.</p>
+
+<p>I'm spending most of my days with companies around the world, teaching their engineers and other staff about a wide range of topics related to test automation.</p>
+
+<p><b>If you want your team to level up their test automation knowledge as well, we should talk!</b></p>
+
+<p align="center"><a href="training" class="btn btn--primary">Check out my training offerings</a></p>
+
+<!-- Offerings for individuals go here -->
+
+<!-- Free and open source workshops -->
+
+<!-- Add testimonials -->
