--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
 ---
 <table><tr><td style="border: none;" align="center"><img src="images/logo_large.png" width="50%"/></td></tr></table>
 
-<p>Hi, I'm Bas Dijkstra, and I help companies improve their software testing efforts through the smart application of tools.</p>
+<p>Hi, I'm Bas Dijkstra, and I help companies improve their software testing efforts through smart application of tools.</p>
 
 <p>I'm spending most of my days with companies around the world, teaching their engineers and other staff about a wide range of topics related to test automation.</p>
 
