--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 layout: home
 ---
+<section>
 <table><tr><td style="border: none;" align="center"><img src="images/logo_large.png" width="50%"/></td></tr></table>
 
 <p>Hi, I'm Bas Dijkstra, and I help companies improve their software testing efforts through smart application of tools.</p>
@@ -13,7 +14,15 @@ layout: home
 <p><b>If you want your team to level up their test automation knowledge as well, we should talk!</b></p>
 
 <p align="center"><a href="training" class="btn btn--primary">Check out my training offerings</a></p>
-
+</section>
+<hr/>
+<section>
+    <div align="center"><h1>Free ebooks</h1></div>
+    <table>
+        <tr><td style="border: none; width: 20%"><a href="https://huddle.eurostarsoftwaretesting.com/resources/test-automation/a-test-automation-learning-path/" target="_blank"><img src="images/ebook_ta.png"/></a></td><td style="border: none;"><p style="font-weight: bold">A Test Automation Learning Path (2020)</p><p>For those of you looking to take your first or your next step in becoming a (better) test automation engineer, I'm presenting a learning path in this ebook that is meant to give you some guidance along the way, as well as pointers to helpful resources. Spoiler alert: there's much more to it than just learning the ins and outs of a specific tool!</p><p>This ebook is published by the team at EuroSTAR Huddle.</p></tr>
+        <tr><td style="border: none; width: 20%"><a href="files/sv_ebook.pdf" target="_blank"><img src="images/ebook_sv.png"/></a></td><td style="border: none;"><p style="font-weight: bold">Service Virtualization - Implementation, Practices and Trends for On-Demand Test Environments (2016)</p><p>If you're looking for a comprehensive introduction to service virtualization and how it can help you test earlier, more and more often, this ebook is exactly what you're looking for.</p><p>This ebook is written in collaboration with and published by Hewlett Packard Enterprise.</p></tr>
+    </table>
+</section>
 <!-- Offerings for individuals go here -->
 
 <!-- Free and open source workshops -->
