Add public events to home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@ layout: home
 </section>
 <hr/>
 <section>
+    <div align="center"><h1>Upcoming events</h1></div>
+    <table>
+        <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
+        <tr><td style="border: none;">May 3, 2021</td><td style="border: none;">Become a (better) test automation engineer</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/Passion-for-testing-Goteborg/" target="_blank">Passion for Testing meetup (SE)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/Passion-for-testing-Goteborg/events/277642964/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+    </table>
+</section>
+<hr/>
+<section>
     <div align="center"><h1>Free ebooks</h1></div>
     <p>I have written a couple of short ebooks, available for free:</p>
     <table>
