Add OmniTestingConf talk to agend

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">May 3, 2021</td><td style="border: none;">Become a (better) test automation engineer</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/Passion-for-testing-Goteborg/" target="_blank">Passion for Testing meetup (SE)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/Passion-for-testing-Goteborg/events/277642964/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">May 25, 2021</td><td style="border: none;">Who will guard the guards themselves? - How to trust your automation and avoid deceit</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.getxray.app/" target="_blank">XRay</a></td><td style="border: none;"><p align="center"><a href="https://hopin.com/events/omnitestingconf" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
 <hr/>
