--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ layout: home
     <div align="center"><h1>Upcoming events</h1></div>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">May 3, 2021</td><td style="border: none;">Become a (better) test automation engineer</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/Passion-for-testing-Goteborg/" target="_blank">Passion for Testing meetup (SE)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/Passion-for-testing-Goteborg/events/277642964/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">May 25, 2021</td><td style="border: none;">Who will guard the guards themselves? - How to trust your automation and avoid deceit</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.getxray.app/" target="_blank">XRay</a></td><td style="border: none;"><p align="center"><a href="https://hopin.com/events/omnitestingconf" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">June 22, 2021</td><td style="border: none;">Contract Testing - Why? What? How?</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/test-automation-talks/" target="_blank">Test Automation Talks meetup (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/test-automation-talks/events/277976993/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
 <hr/>
