--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">June 22, 2021</td><td style="border: none;">Contract Testing - Why? What? How?</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/test-automation-talks/" target="_blank">Test Automation Talks meetup (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/test-automation-talks/events/277976993/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">September 16, 2021</td><td style="border: none;">TBD</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.testautomationdays.com/" target="_blank">Test Automation Days (Utrecht, NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.testautomationdays.com/registration/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
 <hr/>
