--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
     <div align="center"><h1>Upcoming events</h1></div>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">November 9, 2021</td><td style="border: none;">Removing the need for large scale E2E testing with consumer-driven contract tests</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.swtestingforum.org/index.php/en/" target="_blank">Software Testing Forum (IT)</a></td><td style="border: none;"><p align="center"><a href="https://www.swtestingforum.org/index.php/it/programma/programma-delle-web-conference/programma-web-conference-4" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">November 24, 2021</td><td style="border: none;">Taking BDD beyond UI automation</td><td style="border: none;">English</td><td style="border: none;"><a href="https://specflow.org" target="_blank">SpecFlow</a></td><td style="border: none;"><p align="center"><a href="https://specflow.org/community/webinars/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">March 17, 2022</td><td style="border: none;">Keynote (title and topic TBD)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.testautomationdays.com/" target="_blank">Test Automation Days (Utrecht, NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.testautomationdays.com/registration/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
@@ -33,8 +33,3 @@ layout: home
         <tr><td style="border: none; width: 20%"><a href="files/sv_ebook.pdf" target="_blank"><img src="images/ebook_sv.png"/></a></td><td style="border: none;"><p style="font-weight: bold">Service Virtualization - Implementation, Practices and Trends for On-Demand Test Environments (2016)</p><p>If you're looking for a comprehensive introduction to service virtualization and how it can help you test earlier, more and more often, this ebook is exactly what you're looking for.</p><p>This ebook is written in collaboration with and published by Hewlett Packard Enterprise.</p></tr>
     </table>
 </section>
-<!-- Offerings for individuals go here -->
-
-<!-- Free and open source workshops -->
-
-<!-- Add testimonials -->
