Updated registration link for SpecFlow webinar

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: home
     <div align="center"><h1>Upcoming events</h1></div>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">November 24, 2021</td><td style="border: none;">Taking BDD beyond UI automation</td><td style="border: none;">English</td><td style="border: none;"><a href="https://specflow.org" target="_blank">SpecFlow</a></td><td style="border: none;"><p align="center"><a href="https://specflow.org/community/webinars/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">November 24, 2021</td><td style="border: none;">Taking BDD beyond UI automation</td><td style="border: none;">English</td><td style="border: none;"><a href="https://specflow.org" target="_blank">SpecFlow</a></td><td style="border: none;"><p align="center"><a href="https://specflow.org/webinar/taking-bdd-beyond-ui-automation/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">March 17, 2022</td><td style="border: none;">Keynote (title and topic TBD)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.testautomationdays.com/" target="_blank">Test Automation Days (Utrecht, NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.testautomationdays.com/registration/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
