Add Spilberg webinar to agenda

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">November 24, 2021</td><td style="border: none;">Taking BDD beyond UI automation</td><td style="border: none;">English</td><td style="border: none;"><a href="https://specflow.org" target="_blank">SpecFlow</a></td><td style="border: none;"><p align="center"><a href="https://specflow.org/webinar/taking-bdd-beyond-ui-automation/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">December 8, 2021</td><td style="border: none;">Low code automation (in Robot Framework) is programming, too</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="https://www.spilberg.nl" target="_blank">Spilberg</a></td><td style="border: none;"><p align="center"><a href="https://www.spilberg.nl/nl/events/o-o-low-code-robot-framework-gebruiken-is-ook-programmeren" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">March 17, 2022</td><td style="border: none;">Keynote (title and topic TBD)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.testautomationdays.com/" target="_blank">Test Automation Days (Utrecht, NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.testautomationdays.com/registration/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
