--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ layout: home
     <div align="center"><h1>Upcoming events</h1></div>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">November 21-22, 2022</td><td style="border: none;">Talk and half day workshop (API testing and automation)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://testingportugal.pstqb.pt/en/" target="_blank">Testing Portugal (Lisbon, PT)</a></td><td style="border: none;"><p align="center"><a href="https://testingportugal.pstqb.pt/en/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <!--<tr><td style="border: none;">November 21-22, 2022</td><td style="border: none;">Talk and half day workshop (API testing and automation)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://testingportugal.pstqb.pt/en/" target="_blank">Testing Portugal (Lisbon, PT)</a></td><td style="border: none;"><p align="center"><a href="https://testingportugal.pstqb.pt/en/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr> -->
     </table>
 </section>
 <hr/>
