--- a/index.html
+++ b/index.html
@@ -4,15 +4,21 @@
 
 layout: home
 ---
-<section>
+<!-- <section>
 <table><tr><td style="border: none;" align="center"><img src="images/logo_large.png" width="50%"/></td></tr></table>
+</section>
+<hr/> -->
+<section>
+    <p>Hi, I'm Bas, and I've been working in test automation for about 17 years now. Most of that time I spent working as a test automation engineer, but these days I'm mostly active as a <a href="/consulting/">consultant</a> and <a href="/training/">trainer</a>.</p>
+    <p>Next to my in-house consultancy and training services, I provide <a href="/free-public-workshops/">free online workshops</a> on various topics related to API testing and automation for individuals.</p>
+    <p>I'm also dabbling in open-source software development, mainly in C#, and I'm the developer of <a href="https://github.com/basdijkstra/rest-assured-net" target="_blank">RestAssured.Net</a>, a library that strives to make writing tests for HTTP-based APIs in C# simple and fun.</p>
 </section>
 <hr/>
 <section>
     <div align="center"><h1>Upcoming events</h1></div>
+    <p>Here's where you can find me speaking:</p>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">September 25, 2023</td><td style="border: none;">Solving the integration testing puzzle with contract testing (talk / live coding)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.lambdatest.com" target="_blank">LambdaTest webinar (online)</a></td><td style="border: none;"><p align="center"><a href="https://www.lambdatest.com/webinar/solving-the-integration-testing-puzzle-with-contract-testing" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">October 10, 2023</td><td style="border: none;">Fireside chat with Dave Farley and Lewis Prescott</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.pact.io/birthday" target="_blank">Pact.io 10 year birthday bash (online)</a></td><td style="border: none;"><p align="center"><a href="https://cucumber.typeform.com/PactoberEoI?utm_source=lander&utm_medium=web&utm_campaign=pactober2023&utm_content=header&typeform-source=pact.io" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">October 11, 2023</td><td style="border: none;">Test automation with Playwright (workshop)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="https://www.testnet.org" target="_blank">TestNet fall conference (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.testnet.org/evenement/entry/6515/?evenement=najaarsevenement" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">October 18, 2023</td><td style="border: none;">Improving your test automation code (meetup / workshop)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="https://www.meetup.com/testcoders-noord/" target="_blank">TestCoders Noord meetup group (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/testcoders-noord/events/296185654/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
