Add QA Evolution talk to public speaking agenda

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">October 18, 2023</td><td style="border: none;">Improving your test automation code (meetup / workshop)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="https://www.meetup.com/testcoders-noord/" target="_blank">TestCoders Noord meetup group (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/testcoders-noord/events/296185654/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">November 7, 2023</td><td style="border: none;">Solving the integration testing puzzle with contract testing (talk / live coding)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.qa-evolution.com/" target="_blank">QA Evolution - Bug Hunters of Tomorrow (online)</a></td><td style="border: none;"><p align="center"><a href="https://www.qa-evolution.com/#register-form" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
 <hr/>
