Update public speaking agenda

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@ layout: home
 <section>
     <div align="center"><h1>Upcoming events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <table>
+    <p>No talks scheduled at the moment! Want me to speak at your event or in your company? <a href="/contact">Contact me!</a></p>
+    <!--<table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">November 27, 2023</td><td style="border: none;">Building a comprehensive API testing and automation strategy (talk)</td><td style="border: none;">English</td><td style="border: none;"><a href="#" target="_blank">TestBustersDays 2023 (online)</a></td><td style="border: none;"><p align="center"><a href="https://forms.office.com/r/y4eFed0jM9" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
-    </table>
+    </table> -->
 </section>
 <hr/>
 <section>
