Update public speaking agenda

--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@ layout: home
 <section>
     <div align="center"><h1>Upcoming events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <table>
+    <p><i>No public talks scheduled at the moment!</i></p>
+    <!-- <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">January 24, 2024</td><td style="border: none;">Solving the integration testing puzzle with contract-based testing (talk, live demo)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="#" target="_blank">Tech Arena meetup (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/techarena-the-it-meetup-community/events/297923515/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
-    </table>
+    </table> -->
 </section>
 <hr/>
 <section>
