Add HyperTest webinar to homepage

--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@ layout: home
 <section>
     <div align="center"><h1>Upcoming events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <p><i>No public talks scheduled at the moment!</i></p>
-    <!-- <table>
+    <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">January 24, 2024</td><td style="border: none;">Solving the integration testing puzzle with contract-based testing (talk, live demo)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="#" target="_blank">Tech Arena meetup (NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/techarena-the-it-meetup-community/events/297923515/" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
-    </table> -->
+        <tr><td style="border: none;">February 28, 2024</td><td style="border: none;">Contract testing: the key to robust applications (talk, live demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.hypertest.co/" target="_blank">HyperTest (US)</a></td><td style="border: none;"><p align="center"><a href="https://us06web.zoom.us/webinar/register/WN_YhM9At_pSwSy5DNNPDx1Ug#/registration" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+    </table>
 </section>
 <hr/>
 <section>
