Update public speaking agenda

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: home
     <p>Here's where you can find me speaking:</p>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">February 28, 2024</td><td style="border: none;">Contract testing: the key to robust applications (talk, live demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.hypertest.co/" target="_blank">HyperTest (US)</a></td><td style="border: none;"><p align="center"><a href="https://us06web.zoom.us/webinar/register/WN_YhM9At_pSwSy5DNNPDx1Ug#/registration" target="_blank" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">May 29, 2024</td><td style="border: none;">Improving your test automation code (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://expoqa.eu/" target="_blank">Expo:QA conference (Madrid, ES)</a></td><td style="border: none;"><p align="center"><a href="https://expoqa.eu/ticket-shop/">Register here</a></p></td></tr>
     </table>
 </section>
 <hr/>
