--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 
 layout: home
 ---
-<!-- <section>
-<table><tr><td style="border: none;" align="center"><img src="images/logo_large.png" width="50%"/></td></tr></table>
+<section>
+    <a href="https://www.eventbrite.com/e/api-security-testing-workshop-with-bas-dijkstra-tickets-868876471917" class="btn btn--primary" target="_blank">Tickets are on sale for my live, online API security testing workshop on June 4, 2024 (2-6 PM CEST)</a>
 </section>
-<hr/> -->
 <section>
     <p>Hi, I'm Bas, and I've been working in test automation for about 17 years now. Most of that time I spent working as a test automation engineer, but these days I'm mostly active as a <a href="/consulting/">consultant</a> and <a href="/training/">trainer</a>.</p>
     <p>I'm also dabbling in open-source software development, mainly in C#, and I'm the developer of <a href="https://github.com/basdijkstra/rest-assured-net" target="_blank">RestAssured.Net</a>, a library that strives to make writing tests for HTTP-based APIs in C# simple and fun.</p>
