--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 layout: home
 ---
 <section>
+    <a href="https://courses.ontestautomation.com" class="btn btn--primary">Enroll in my 'Practical contract testing with Pact' course now!</a>
+</section>
+<section>
     <p>Hi, I'm Bas, and I've been working in test automation for about 17 years now. Most of that time I spent working as a test automation engineer, but these days I'm mostly active as a <a href="/consulting/">consultant</a> and <a href="/training/">trainer</a>.</p>
     <p>I'm also dabbling in open-source software development, mainly in C#, and I'm the developer of <a href="https://github.com/basdijkstra/rest-assured-net" target="_blank">RestAssured.Net</a>, a library that strives to make writing tests for HTTP-based APIs in C# simple and fun.</p>
 </section>
