--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@ layout: home
     <p>Here's where you can find me speaking:</p>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">October 29, 2024</td><td style="border: none;">From Discovery to Automation: a deep dive into BDD (talk) </td><td style="border: none;">English</td><td style="border: none;"><a href="https://shiftsync.tricentis.com/" target="_blank">Tricentis ShiftSync (online)</a></td><td style="border: none;"><p align="center"><a href="https://shiftsync.tricentis.com/events/from-discovery-to-automation-a-deep-dive-into-effective-bdd-practices-49" class="btn btn--primary">Register here</a></p></td></tr>
         <tr><td style="border: none;">November 5, 2024</td><td style="border: none;">Solving the integration testing puzzle with contract testing (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/innovate-qa-seattle-meetup-group/" target="_blank">Innovate QA Seattle (online)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/innovate-qa-seattle-meetup-group/events/303767996/" class="btn btn--primary">Register here</a></p></td></tr>
+        <tr><td style="border: none;">November 27, 2024</td><td style="border: none;">Solving the integration testing puzzle with contract testing (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.meetup.com/qa-testing-in-agile-devops/" target="_blank">QA & Testing in Agile & DevOps meetup group (Brussels, BE)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/qa-testing-in-agile-devops/events/304141229/" class="btn btn--primary">Register here</a></p></td></tr>
     </table>
 </section>
 <hr/>
