Add Live2Test conference to agenda

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">January 28, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="https://www.meetup.com/nl-NL/nimma-codes-meetup-group/" target="_blank">Nimma.codes meetup group (Arnhem, NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/nl-NL/nimma-codes-meetup-group/events/303825823/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
+        <tr><td style="border: none;">May 27-28, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.live2test.com/" target="_blank">Live2Test conference (online)</a></td><td style="border: none;"><p align="center"><a href="https://live2test.com/#tickets" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
         <tr><td style="border: none;">October 6, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk and workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://sast.se/" target="_blank">SAST (Stockholm, SE)</a></td><td style="border: none;"><p align="center"><a href="https://sast30.confetti.events/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
     </table>
 </section>
