Add public training courses to home page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@ layout: home
 </section>
 <hr/>
 <section>
+    <div align="center"><h1>Upcoming public training courses</h1></div>
+    <table>
+        <tr><th>Date</th><th>Course</th><th>Location</th><th>Language</th><th>With</th><th/></tr>
+        <tr><td style="border: none;">April 7-8, 2025</td><td style="border: none;">API testing masterclass</td><td style="border: none;">Baarn (NL)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://improveqs.nl/" target="_blank">ICT Improve</a></td><td style="border: none;"><p align="center"><a href="https://improveqs.nl/en/training/api-testing-masterclass-en/api-testing-masterclass/" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
+    </table>
+</section><section>
     <div align="center"><h1>Upcoming events</h1></div>
     <p>Here's where you can find me speaking:</p>
     <table>
