Set table width to 100%

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@ layout: home
 <hr/>
 <section>
     <div align="center"><h1>Upcoming public training courses</h1></div>
-    <table>
+    <table style="width:100%">
         <tr><th>Date</th><th>Course</th><th>Location</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">April 7-8, 2025</td><td style="border: none;">API testing masterclass</td><td style="border: none;">Baarn (NL)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://improveqs.nl/" target="_blank">ICT Improve</a></td><td style="border: none;"><p align="center"><a href="https://improveqs.nl/en/training/api-testing-masterclass-en/api-testing-masterclass/" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
     </table>
 </section><section>
     <div align="center"><h1>Upcoming events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <table>
+    <table style="width:100%">
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">January 28, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">Dutch</td><td style="border: none;"><a href="https://www.meetup.com/nl-NL/nimma-codes-meetup-group/" target="_blank">Nimma.codes meetup group (Arnhem, NL)</a></td><td style="border: none;"><p align="center"><a href="https://www.meetup.com/nl-NL/nimma-codes-meetup-group/events/303825823/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
         <tr><td style="border: none;">May 27-28, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.live2test.com/" target="_blank">Live2Test conference (online)</a></td><td style="border: none;"><p align="center"><a href="https://live2test.com/#tickets" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
