Remove unnecessary link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Course</th><th>Location</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">April 7-8, 2025</td><td style="border: none;">API testing masterclass</td><td style="border: none;">Baarn (NL)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://improveqs.nl/" target="_blank">ICT Improve</a></td><td style="border: none;"><p align="center"><a href="https://improveqs.nl/en/training/api-testing-masterclass-en/api-testing-masterclass/" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
-        <tr><td style="border: none;">May 6, 2025</td><td style="border: none;">API security testing workshop</td><td style="border: none;">online</td><td style="border: none;">English</td><td style="border: none;"><a href="https://www.ontestautomation.com/" target="_blank">self-hosted</a></td><td style="border: none;"><p align="center"><a href="https://www.eventbrite.nl/e/api-security-testing-workshop-with-bas-dijkstra-tickets-1251745236699" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
+        <tr><td style="border: none;">May 6, 2025</td><td style="border: none;">API security testing workshop</td><td style="border: none;">online</td><td style="border: none;">English</td><td style="border: none;">self-hosted</td><td style="border: none;"><p align="center"><a href="https://www.eventbrite.nl/e/api-security-testing-workshop-with-bas-dijkstra-tickets-1251745236699" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
     </table>
 </section>
 <hr/>
