--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@ layout: home
 </section>
 <hr/>
 <section>
-    <div align="center"><h1>Upcoming public training courses</h1></div>
+    <div align="center"><h2>Upcoming public training courses and workshops</h2></div>
+    <p>Looking for an opportunity to join a workshop I facilitate?</p>
     <table>
         <tr><th>Date</th><th>Course</th><th>Location</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">April 7-8, 2025</td><td style="border: none;">API testing masterclass</td><td style="border: none;">Baarn (NL)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://improveqs.nl/" target="_blank">ICT Improve</a></td><td style="border: none;"><p align="center"><a href="https://improveqs.nl/en/training/api-testing-masterclass-en/api-testing-masterclass/" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
@@ -23,7 +24,7 @@ layout: home
 </section>
 <hr/>
 <section>
-    <div align="center"><h1>Upcoming events</h1></div>
+    <div align="center"><h2>Upcoming public talks and events</h2></div>
     <p>Here's where you can find me speaking:</p>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
@@ -33,7 +34,7 @@ layout: home
 </section>
 <hr/>
 <section>
-    <div align="center"><h1>Free ebooks</h1></div>
+    <div align="center"><h2>Free ebooks</h2></div>
     <p>I have written a couple of short ebooks, available for free:</p>
     <table>
         <tr><td style="border: none; width: 20%"><a href="https://huddle.eurostarsoftwaretesting.com/resources/test-automation/a-test-automation-learning-path/" target="_blank"><img src="images/ebook_ta.png"/></a></td><td style="border: none;"><p style="font-weight: bold">A Test Automation Learning Path (2020)</p><p>For those of you looking to take your first or your next step in becoming a (better) test automation engineer, I'm presenting a learning path in this ebook that is meant to give you some guidance along the way, as well as pointers to helpful resources. Spoiler alert: there's much more to it than just learning the ins and outs of a specific tool!</p><p>This ebook is published by the team at EuroSTAR Huddle.</p></tr>
