Update link to course on button

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 layout: home
 ---
 <section>
-    <a href="https://courses.ontestautomation.com" class="btn btn--primary">Enroll in my 'Practical contract testing with Pact' course now!</a>
+    <a href="https://ontestautomation.teachable.com/p/practical-contract-testing-with-pact" class="btn btn--primary" target="_blank">Enroll in my 'Practical contract testing with Pact' course now!</a>
 </section>
 <section>
     <p>Hi, I'm Bas, and I've been working in test automation for about 18 years now. Most of that time I spent working as a test automation engineer, but these days I'm mostly active as a <a href="/consulting/">consultant</a> and <a href="/training/">trainer</a>.</p>
