Rework home page, move ebooks to resources

--- a/index.html
+++ b/index.html
@@ -5,13 +5,25 @@
 layout: home
 ---
 <section>
-    <a href="https://ontestautomation.teachable.com/p/practical-contract-testing-with-pact" class="btn btn--primary" target="_blank">Enroll in my 'Practical contract testing with Pact' course now!</a>
+    <p>Discover a practical, real-world strategy for development and QA teams to stop spinning their wheels and start making test automation actually work.</p>
+    <p><ul><li>Know why your automation matters - and what success really looks like</li><li>Cut waste by automating what actually delivers value</li><li>Learn how high-performing teams run automation that doesn't become a bottleneck</li></ul></p>
 </section>
 <section>
-    <p>Hi, I'm Bas, and I've been working in test automation for about 19 years now. Most of that time I spent working as a test automation engineer, but these days I'm mostly active as a <a href="/consulting/">consultant</a> and <a href="/training/">trainer</a>.</p>
-    <p>I'm also dabbling in open-source software development, mainly in C#, and I'm the developer of <a href="https://github.com/basdijkstra/rest-assured-net" target="_blank">RestAssured.Net</a>, a library that strives to make writing tests for HTTP-based APIs in C# simple and fun.</p>
+    <a href="https://learn.ontestautomation.com" class="btn btn--primary" target="_blank">How to get valuable feedback fast from your test automation</a>
 </section>
+
 <hr/>
+
+<section>
+    <p>Want to learn what contract testing is, how it addresses integration testing issues in distributed software systems, and how Pact and the tools in the Pact ecosystem can help you implement contract testing?</p>
+    <p>My online, self-paced video course on contract testing is exactly what you're looking for.</p>
+</section>
+<section>
+    <a href="https://ontestautomation.teachable.com/p/practical-contract-testing-with-pact" class="btn btn--primary" target="_blank">Enroll in my 'Practical contract testing with Pact' course now!</a>
+</section>
+
+<hr/>
+
 <section>
     <div align="center"><h1>Upcoming public training courses and workshops</h1></div>
     <p>Looking for an opportunity to join a workshop I facilitate?</p>
@@ -30,14 +42,5 @@ layout: home
         <tr><td style="border: none;">July 22, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk and live demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://testomat.io/" target="_blank">Testomat (online)</a></td><td style="border: none;"><p align="center"><a href="https://testomat.io/events/test-automation-meetup-july-2025/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
         <tr><td style="border: none;">October 6, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk and workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://sast.se/" target="_blank">SAST (Stockholm, SE)</a></td><td style="border: none;"><p align="center"><a href="https://sast30.confetti.events/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
         <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
-    </table>
-</section>
-<hr/>
-<section>
-    <div align="center"><h1>Free ebooks</h1></div>
-    <p>I have written a couple of short ebooks, available for free:</p>
-    <table>
-        <tr><td style="border: none; width: 20%"><a href="https://huddle.eurostarsoftwaretesting.com/resources/test-automation/a-test-automation-learning-path/" target="_blank"><img src="images/ebook_ta.png"/></a></td><td style="border: none;"><p style="font-weight: bold">A Test Automation Learning Path (2020)</p><p>For those of you looking to take your first or your next step in becoming a (better) test automation engineer, I'm presenting a learning path in this ebook that is meant to give you some guidance along the way, as well as pointers to helpful resources. Spoiler alert: there's much more to it than just learning the ins and outs of a specific tool!</p><p>This ebook is published by the team at EuroSTAR Huddle.</p></tr>
-        <tr><td style="border: none; width: 20%"><a href="files/sv_ebook.pdf" target="_blank"><img src="images/ebook_sv.png"/></a></td><td style="border: none;"><p style="font-weight: bold">Service Virtualization - Implementation, Practices and Trends for On-Demand Test Environments (2016)</p><p>If you're looking for a comprehensive introduction to service virtualization and how it can help you test earlier, more and more often, this ebook is exactly what you're looking for.</p><p>This ebook is written in collaboration with and published by Hewlett Packard Enterprise.</p></tr>
     </table>
 </section>
