Add new section to homepage, re-add link to mentoring in navbar

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
 layout: home
 ---
 <section>
-    <p>Discover a practical, real-world strategy for development and QA teams to stop spinning their wheels and start making test automation actually work.</p>
-    <p><ul><li>Know why your automation matters - and what success really looks like</li><li>Cut waste by automating what actually delivers value</li><li>Learn how high-performing teams run automation that doesn't become a bottleneck</li></ul></p>
-</section>
-<section>
-    <a href="https://learn.ontestautomation.com" class="btn btn--primary" target="_blank">How to get valuable feedback fast from your test automation</a>
+    <p>We test because we want to be informed about the state of the product we're working on, as well as about any potential problems that might occur when the people use our product.</p>
+    <p>We use tools to support our testing (test automation) because we are looking for valuable feedback, fast.</p>
+    <p>Successful implementation of test automation requires more than throwing a tool at a testing problem - you'll need a holistic test automation strategy that takes into account the why, what, where, when, who and how of test automation if you want your test automation to live up to the expectations.</p>
+    <p>That's <a href="/about">where I come in</a>.</p>
+    <p>I have close to two decades of experience in the field, and in those years, I have worked with a wide range of clients around the world, helping them implement test automation and improve their test automation efforts.</p>
+    <p>I do this through training, consulting and mentoring (LINKS), as well as through public speaking. No matter the form in which we work together, my approach is always tailor-made to fit your specific context and requirements.</p>
+    <p>Want to see if and how we can work together? Let's talk.</p>
 </section>
 
 <hr/>
 
 <section>
-    <p>Want to learn what contract testing is, how it addresses integration testing issues in distributed software systems, and how Pact and the tools in the Pact ecosystem can help you implement contract testing?</p>
-    <p>My online, self-paced video course on contract testing is exactly what you're looking for.</p>
+    <p>Discover a practical, real-world strategy for development and QA teams to stop spinning their wheels and start making test automation actually work.</p>
+    <p><ul><li>Know why your automation matters - and what success really looks like</li><li>Cut waste by automating what actually delivers value</li><li>Learn how high-performing teams run automation that doesn't become a bottleneck</li></ul></p>
 </section>
 <section>
-    <a href="https://ontestautomation.teachable.com/p/practical-contract-testing-with-pact" class="btn btn--primary" target="_blank">Enroll in my 'Practical contract testing with Pact' course now!</a>
+    <a href="https://learn.ontestautomation.com" class="btn btn--primary" target="_blank">How to get valuable feedback fast from your test automation</a>
 </section>
 
 <hr/>
