--- a/index.html
+++ b/index.html
@@ -5,18 +5,19 @@
 layout: home
 ---
 <section>
-    <p>We test because we want to be informed about the state of the product we're working on, as well as about any potential problems that might occur when the people use our product.</p>
-    <p>We use tools to support our testing (test automation) because we are looking for valuable feedback, fast.</p>
-    <p>Successful implementation of test automation requires more than throwing a tool at a testing problem - you'll need a holistic test automation strategy that takes into account the why, what, where, when, who and how of test automation if you want your test automation to live up to the expectations.</p>
-    <p>That's <a href="/about">where I come in</a>.</p>
-    <p>I have close to two decades of experience in the field, and in those years, I have worked with a wide range of clients around the world, helping them implement test automation and improve their test automation efforts.</p>
-    <p>I do this through training, consulting and mentoring (LINKS), as well as through public speaking. No matter the form in which we work together, my approach is always tailor-made to fit your specific context and requirements.</p>
-    <p>Want to see if and how we can work together? Let's talk.</p>
+    <p>We test because we want to be informed about the state of the product we're working on, and about any potential problems that might occur when people use our product.</p>
+    <p>We use tools to support our testing (test automation) because we want valuable feedback, fast.</p>
+    <p>Successful implementation of test automation requires more than throwing a tool at a testing problem if you want your test automation to live up to the expectations.</p>
+    <p>That's <a href="/about/">where I come in</a>.</p>
+    <p>I have <a href="https://www.linkedin.com/in/basdijkstra" target="_blank">close to two decades of experience in the field</a>, and in those years, I have worked with a wide range of clients around the world, teaching them how to improve their test automation efforts.</p>
+    <p>I do this through <a href="/training/">training</a>, <a href="/consulting/">consulting</a> and <a href="/mentoring/">mentoring</a>, as well as through <a href="/resources/#talks">public speaking</a>. No matter the form in which we work together, my approach is always tailor-made to fit your specific context and requirements.</p>
+    <p>Want to see if and how we can work together? <a href="/contact/">Let's talk</a>.</p>
 </section>
 
 <hr/>
 
 <section>
+    <div align="center"><h1>Looking to improve your test automation strategy?</h1></div>
     <p>Discover a practical, real-world strategy for development and QA teams to stop spinning their wheels and start making test automation actually work.</p>
     <p><ul><li>Know why your automation matters - and what success really looks like</li><li>Cut waste by automating what actually delivers value</li><li>Learn how high-performing teams run automation that doesn't become a bottleneck</li></ul></p>
 </section>
