--- a/index.html
+++ b/index.html
@@ -6,12 +6,33 @@ layout: home
 ---
 <section>
     <p>We test because we want to be informed about the state of the product we're working on, and about any potential problems that might occur when people use our product.</p>
-    <p>We use tools to support our testing (test automation) because we want valuable feedback, fast.</p>
+    <p>We use tools to support our testing (test automation) because we want <strong>valuable feedback, fast</strong>.</p>
     <p>Successful implementation of test automation requires more than throwing a tool at a testing problem if you want your test automation to live up to the expectations.</p>
     <p>That's <a href="/about/">where I come in</a>.</p>
     <p>I have <a href="https://www.linkedin.com/in/basdijkstra" target="_blank">close to two decades of experience in the field</a>, and in those years, I have worked with a wide range of clients around the world, teaching them how to improve their test automation efforts.</p>
     <p>I do this through <a href="/training/">training</a>, <a href="/consulting/">consulting</a> and <a href="/mentoring/">mentoring</a>, as well as through <a href="/resources/#talks">public speaking</a>. No matter the form in which we work together, my approach is always tailor-made to fit your specific context and requirements.</p>
     <p>Want to see if and how we can work together? <a href="/contact/">Let's talk</a>.</p>
+</section>
+
+<hr/>
+
+<section>
+    <div align="center"><h1>Upcoming public training courses and workshops</h1></div>
+    <p>Looking for an opportunity to join a workshop I facilitate?</p>
+    <table>
+        <tr><th>Date</th><th>Course</th><th>Location</th><th>Language</th><th>With</th><th/></tr>
+        <tr><td style="border: none;">November 24-25, 2025</td><td style="border: none;">Python for testers</td><td style="border: none;">Baarn (NL)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://improveqs.nl/" target="_blank">ICT Improve</a></td><td style="border: none;"><p align="center"><a href="https://ict-improve.nl/training/python-for-testers-en/python-for-testers-2/" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
+    </table>
+</section>
+<hr/>
+<section>
+    <div align="center"><h1>Upcoming public talks and events</h1></div>
+    <p>Here's where you can find me speaking:</p>
+    <table>
+        <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
+        <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
+        <tr><td style="border: none;">November 22-23, 2025</td><td style="border: none;">To be determinde</td><td style="border: none;">English</td><td style="border: none;"><a href="https://gtr.agiletestingalliance.org/" target="_blank">Global Testing Retreat (online)</a></td><td style="border: none;"><p align="center"><a href="https://gtr.agiletestingalliance.org/registration/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
+    </table>
 </section>
 
 <hr/>
@@ -23,25 +44,4 @@ layout: home
 </section>
 <section>
     <a href="https://learn.ontestautomation.com" class="btn btn--primary" target="_blank">How to get valuable feedback fast from your test automation</a>
-</section>
-
-<hr/>
-
-<section>
-    <div align="center"><h1>Upcoming public training courses and workshops</h1></div>
-    <p>Looking for an opportunity to join a workshop I facilitate?</p>
-    <table>
-        <tr><th>Date</th><th>Course</th><th>Location</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">October 21, 2025</td><td style="border: none;">Mutation testing workshop</td><td style="border: none;">online</td><td style="border: none;">English</td><td style="border: none;">self-hosted</td><td style="border: none;"><p align="center"><a href="https://www.eventbrite.nl/e/mutation-testing-workshop-with-bas-dijkstra-tickets-1614578851809" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
-        <tr><td style="border: none;">November 24-25, 2025</td><td style="border: none;">Python for testers</td><td style="border: none;">Baarn (NL)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://improveqs.nl/" target="_blank">ICT Improve</a></td><td style="border: none;"><p align="center"><a href="https://ict-improve.nl/training/python-for-testers-en/python-for-testers-2/" class="btn btn--primary" target="_blank">Enroll here</a></p></td></tr>
-    </table>
-</section>
-<hr/>
-<section>
-    <div align="center"><h1>Upcoming public talks and events</h1></div>
-    <p>Here's where you can find me speaking:</p>
-    <table>
-        <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
-    </table>
 </section>
