--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: home
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
-        <tr><td style="border: none;">November 22-23, 2025</td><td style="border: none;">To be determinde</td><td style="border: none;">English</td><td style="border: none;"><a href="https://gtr.agiletestingalliance.org/" target="_blank">Global Testing Retreat (online)</a></td><td style="border: none;"><p align="center"><a href="https://gtr.agiletestingalliance.org/registration/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
+        <tr><td style="border: none;">November 22-23, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://gtr.agiletestingalliance.org/" target="_blank">Global Testing Retreat (online)</a></td><td style="border: none;"><p align="center"><a href="https://gtr.agiletestingalliance.org/registration/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
     </table>
 </section>
 
