Update home page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: home
 ---
 <section>
     <p>We test because we want to be informed about the state of the product we're working on, and about any potential problems that might occur when people use our product.</p>
-    <p>We use tools to support our testing (test automation) because we want <strong>valuable feedback, fast</strong>.</p>
+    <p>We use tools to support our testing (test automation) because we want <strong><a href="/training/valuable_feedback_fast">valuable feedback, fast</a></strong>.</p>
     <p>Successful implementation of test automation requires more than throwing a tool at a testing problem if you want your test automation to live up to the expectations.</p>
     <p>That's <a href="/about/">where I come in</a>.</p>
     <p>I have <a href="https://www.linkedin.com/in/basdijkstra" target="_blank">close to two decades of experience in the field</a>, and in those years, I have worked with a wide range of clients around the world, teaching them how to improve their test automation efforts.</p>
@@ -19,20 +19,10 @@ layout: home
 <section>
     <div align="center"><h1>Upcoming public talks and events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <table>
+    <p><em>No public talks scheduled at the moment</em></p>
+    <!-- <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
         <tr><td style="border: none;">November 22-23, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://gtr.agiletestingalliance.org/" target="_blank">Global Testing Retreat (online)</a></td><td style="border: none;"><p align="center"><a href="https://gtr.agiletestingalliance.org/registration/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
-    </table>
-</section>
-
-<hr/>
-
-<section>
-    <div align="center"><h1>Looking to improve your test automation strategy?</h1></div>
-    <p>Discover a practical, real-world strategy for development and QA teams to stop spinning their wheels and start making test automation actually work.</p>
-    <p><ul><li>Know why your automation matters - and what success really looks like</li><li>Cut waste by automating what actually delivers value</li><li>Learn how high-performing teams run automation that doesn't become a bottleneck</li></ul></p>
-</section>
-<section>
-    <a href="https://learn.ontestautomation.com" class="btn btn--primary" target="_blank">How to get valuable feedback fast from your test automation</a>
+    </table> -->
 </section>
