--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: home
 <section>
     <div align="center"><h1>Upcoming public talks and events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <p><em>No public talks scheduled at the moment</em></p>
+    <p><em>No public talks scheduled at the moment. <a href="/contact/">Contact me</a> if you would like to book me as a speaker in your company or at your event.</em></p>
     <!-- <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
