Shorten text on home page

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@ layout: home
 <section>
     <p>We test because we want to be informed about the state of the product we're working on, and about any potential problems that might occur when people use our product.</p>
     <p>We use tools to support our testing (test automation) because we want <strong><a href="/training/valuable-feedback-fast/">valuable feedback, fast</a></strong>.</p>
-    <p>Successful implementation of test automation requires more than throwing a tool at a testing problem if you want your test automation to live up to the expectations.</p>
-    <p>That's <a href="/about/">where I come in</a>.</p>
+    <p>Being successful with test automation requires more than throwing a tool at a testing problem. That's <a href="/about/">where I come in</a>.</p>
     <p>I have <a href="https://www.linkedin.com/in/basdijkstra" target="_blank">close to two decades of experience in the field</a>, and in those years, I have worked with a wide range of clients around the world, teaching them how to improve their test automation efforts.</p>
     <p>I do this through <a href="/training/">training</a>, <a href="/consulting/">consulting</a> and <a href="/mentoring/">mentoring</a>, as well as through <a href="/resources/#talks">public speaking</a>. No matter the form in which we work together, my approach is always tailor-made to fit your specific context and requirements.</p>
     <p>Want to see if and how we can work together? <a href="/contact/">Let's talk</a>.</p>
