Blog post on EuroSTAR 2026 session

--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@ layout: home
 <section>
     <div align="center"><h1>Upcoming public talks and events</h1></div>
     <p>Here's where you can find me speaking:</p>
-    <p><em>No public talks scheduled at the moment. <a href="/contact/">Contact me</a> if you would like to book me as a speaker in your company or at your event.</em></p>
-    <!-- <table>
+    <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
-        <tr><td style="border: none;">November 10, 2025</td><td style="border: none;">Are you sure your APIs are secure? (workshop)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://automation.eurostarsoftwaretesting.com/" target="_blank">AutomationSTAR (Amsterdam, NL)</a></td><td style="border: none;"><p align="center"><a href="https://automation.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
-        <tr><td style="border: none;">November 22-23, 2025</td><td style="border: none;">Are you sure your APIs are secure? (talk / demo)</td><td style="border: none;">English</td><td style="border: none;"><a href="https://gtr.agiletestingalliance.org/" target="_blank">Global Testing Retreat (online)</a></td><td style="border: none;"><p align="center"><a href="https://gtr.agiletestingalliance.org/registration/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
-    </table> -->
+        <tr><td style="border: none;">June 15, 2026</td><td style="border: none;">Breaking down and improving your Playwright E2E tests (tutorial)<td style="border: none;">English</td><td style="border: none;"><a href="https://conference.eurostarsoftwaretesting.com/" target="_blank">EuroSTAR (Oslo, NO)</a></td><td style="border: none;"><p align="center"><a href="https://conference.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
+    </table>
 </section>
