Phrasing on home page

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ layout: home
 <hr/>
 
 <section>
-    <div align="center"><h1>Upcoming public talks and events</h1></div>
-    <p>Here's where you can find me speaking:</p>
+    <div align="center"><h1>Upcoming public workshops and talks</h1></div>
+    <p>Here's where you can find me facilitating or speaking:</p>
     <table>
         <tr><th>Date</th><th>Title</th><th>Language</th><th>With</th><th/></tr>
         <tr><td style="border: none;">June 15, 2026</td><td style="border: none;">Breaking down and improving your Playwright E2E tests (tutorial)<td style="border: none;">English</td><td style="border: none;"><a href="https://conference.eurostarsoftwaretesting.com/" target="_blank">EuroSTAR (Oslo, NO)</a></td><td style="border: none;"><p align="center"><a href="https://conference.eurostarsoftwaretesting.com/tickets/" class="btn btn--primary" target="_blank">Register here</a></p></td></tr>
